src/main/java/com/example/trackon/error/TrackOnExceptionHandler.java
package com.example.trackon.error;

import com.example.trackon.error.exception.ErrorCode;
import com.example.trackon.error.exception.TrackOnException;
import lombok.extern.slf4j.Slf4j;
import org.springframework.http.HttpStatus;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.ControllerAdvice;
import org.springframework.web.bind.annotation.ExceptionHandler;

@Slf4j
@ControllerAdvice
public class TrackOnExceptionHandler {

    @ExceptionHandler(TrackOnException.class)
    public ResponseEntity<ErrorResponse> exceptionHandler(final TrackOnException e) {
        log.error(e.toString());

        final ErrorCode errorCode = e.getErrorCode();
        return new ResponseEntity<>(new ErrorResponse(errorCode.getStatus(), errorCode.getMessage()),
                HttpStatus.valueOf(errorCode.getStatus()));
    }
}
